--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,4 @@
 title: "IS415-Geospatial"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+Welcome to my **IS415 Geospatial Analytics and Applications** website. In this website, you will find my coursework.
