Commit after in-class ex 2

--- a/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
+++ b/Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.qmd
@@ -1,6 +1,13 @@
 ---
 title: "Hands-On Exercise 1"
 author: "Immanuel"
+date: "August 17, 2024"
+date-modified: "last-modified"
+execute: 
+  eval: true
+  echo: true
+  warning: false
+  freeze: true
 ---
 
 ## 1.1 Overview
