--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -883,7 +883,7 @@ The null hypothesis will be rejected if p-value is smaller than alpha value of 0
 The code chunk below is used to perform the hypothesis testing.
 
 ```{r}
-K_ck.csr <- envelope(childcare_ck_ppp, Kest, nsim = 999, nrank = 1, glocal = TRUE)
+K_ck.csr <- envelope(childcare_ck_ppp, Kest, nsim = 999, nrank = 1, global = TRUE)
 
 ```
 
@@ -916,7 +916,7 @@ The null hypothesis will be rejected if p-value is smaller than alpha value of 0
 The code chunk below is used to perform the hypothesis testing.
 
 ```{r}
-K_tm.csr <- envelope(childcare_tm_ppp, Kest, nsim = 999, rank = 1, glocal = TRUE)
+K_tm.csr <- envelope(childcare_tm_ppp, Kest, nsim = 999, rank = 1, global = TRUE)
 ```
 
 ```{r}
@@ -952,7 +952,7 @@ The null hypothesis will be rejected if p-value if smaller than alpha value of 0
 The code chunk below is used to perform the hypothesis testing.
 
 ```{r}
-L_ck.csr <- envelope(childcare_ck_ppp, Lest, nsim = 999, rank = 1, glocal = TRUE)
+L_ck.csr <- envelope(childcare_ck_ppp, Lest, nsim = 999, rank = 1, global = TRUE)
 
 ```
 
@@ -986,7 +986,7 @@ The null hypothesis will be rejected if p-value is smaller than alpha value of 0
 The code chunk below will be used to perform the hypothesis testing.
 
 ```{r}
-L_tm.csr <- envelope(childcare_tm_ppp, Lest, nsim = 999, nrank = 1, glocal = TRUE)
+L_tm.csr <- envelope(childcare_tm_ppp, Lest, nsim = 999, nrank = 1, global = TRUE)
 
 ```
 
