--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -121,7 +121,7 @@ Notice that all the geospatial layers are within the same map extend. This shows
 Alternatively, we can also prepare a pin map by using the code chunk below.
 
 ```{r}
-tmap_mode("view")
+tmap_mode("plot")
 
 tm_shape(childcare_sf) +
   tm_dots()
